--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.21.4",
     "@babel/register": "^7.21.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
